--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-prismic": "^1.0.9",
+    "graphql": "^15.5.1",
+    "graphql-tag": "^2.12.5",
+    "js-cookie": "^2.2.1",
+    "node-sass": "^4.14.1",
     "prismic-javascript": "^2.1.1",
     "prismic-reactjs": "^1.1.2",
     "qs": "^6.9.1",
